// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Component renders Ant icon correctly 1`] = `
<DocumentFragment>
  <svg
    aria-label="AiOutlineHome"
    color="currentColor"
    fill="currentColor"
    height="24"
    role="img"
    stroke="currentColor"
    stroke-width="0"
    style="color: currentColor;"
    viewBox="0 0 1024 1024"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon Component renders Feather icon correctly 1`] = `
<DocumentFragment>
  <svg
    aria-label="FiHome"
    color="currentColor"
    fill="none"
    height="24"
    role="img"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    style="color: currentColor;"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
    <polyline
      points="9 22 9 12 15 12 15 22"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon Component renders Phosphor icon correctly 1`] = `
<DocumentFragment>
  <svg
    aria-label="PiHouse"
    color="currentColor"
    fill="currentColor"
    height="24"
    role="img"
    stroke="currentColor"
    stroke-width="0"
    style="color: currentColor;"
    viewBox="0 0 256 256"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M219.31,108.68l-80-80a16,16,0,0,0-22.62,0l-80,80A15.87,15.87,0,0,0,32,120v96a8,8,0,0,0,8,8h64a8,8,0,0,0,8-8V160h32v56a8,8,0,0,0,8,8h64a8,8,0,0,0,8-8V120A15.87,15.87,0,0,0,219.31,108.68ZM208,208H160V152a8,8,0,0,0-8-8H104a8,8,0,0,0-8,8v56H48V120l80-80,80,80Z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Icon Component renders custom icon correctly 1`] = `
<DocumentFragment>
  <svg
    aria-label="HeartSvg"
    color="currentColor"
    fill="currentColor"
    height="1em"
    role="img"
    size="24"
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <path
      d="M923 283.6c-13.4-31.1-32.6-58.9-56.9-82.8-24.3-23.8-52.5-42.4-84-55.5-32.5-13.5-66.9-20.3-102.4-20.3-49.3 0-97.4 13.5-139.2 39-10 6.1-19.5 12.8-28.5 20.1-9-7.3-18.5-14-28.5-20.1-41.8-25.5-89.9-39-139.2-39-35.5 0-69.9 6.8-102.4 20.3-31.4 13-59.7 31.7-84 55.5-24.4 23.9-43.5 51.7-56.9 82.8-13.9 32.3-21 66.6-21 101.9 0 33.3 6.8 68 20.3 103.3 11.3 29.5 27.5 60.1 48.2 91 32.8 48.9 77.9 99.9 133.9 151.6 92.8 85.7 184.7 144.9 188.6 147.3l23.7 15.2c10.5 6.7 24 6.7 34.5 0l23.7-15.2c3.9-2.5 95.7-61.6 188.6-147.3 56-51.7 101.1-102.7 133.9-151.6 20.7-30.9 37-61.5 48.2-91 13.5-35.3 20.3-70 20.3-103.3 0.1-35.3-7-69.6-20.9-101.9z"
    />
  </svg>
</DocumentFragment>
`;
